Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule_Criteria__c/Compliance_Rule_Criteria__c.object-meta.xml
<CustomObject>
    <description>This object stores the individual evaluation criteria that make up the compliance rule.</description>
    <label>Compliance Rule Criteria</label>
    <nameField>
        <displayFormat>RC-{000000}</displayFormat>
        <label>Compliance Rule Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compliance Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>