Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule_Criteria__c/fields/Compliance_Rule__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Rule__c</fullName>
    <label>Compliance Rule</label>
    <referenceTo>Compliance_Rule__c</referenceTo>
    <relationshipLabel>Compliance Rule Criteria</relationshipLabel>
    <relationshipName>Compliance_Rule_Criteria</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>