Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule_Criteria__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>