Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule_Criteria__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>