Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule_Criteria__c/fields/Node__c.field-meta.xml
<CustomField>
    <fullName>Node__c</fullName>
    <label>Node</label>
    <length>255</length>
    <type>Text</type>
</CustomField>