Dummy_Package_for_scratch_org/main/default/objects/Compliance_Rule_Criteria__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>